Updated Steve Wozniaks biography in his webpage.

--- a/stevewozniak.html
+++ b/stevewozniak.html
@@ -18,6 +18,7 @@
                 </p>
                 <h3 class="display-6">Biography</h3>
                 <p> Steve Wozniak was born on August 11, 1950 in San Jose, California. He atended the University of Colorado at Boulder for one year before he dropped out. During the early 1970s, hw worked at a number of small electronics firms in San Francisco and eventually obtained a position at Hewlett-Packard Company in 1975. Wozniak also attended the Homebrew Computer CLub where he and Steve Jobs worked together to found Apple.
+                    While Wozniak has largely taken a robinhood role to Steve Jobs and stayed out of the spotlight, many prominent computer scientists agree that it was him that was the true technical brainsh behind the founding of Apple.
                 </p>
             </p> 
             </div>
